--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-modernist
+title: Welcome to my new website
+description: feel free to bookmark this and keep an eye on my projects updates
